--- a/members/menu.html
+++ b/members/menu.html
@@ -21,7 +21,7 @@
 <p><b><a href="Edelweiss_Cabin_Operating_Procedures.pdf">Cabin Operating Procedures</a> </b></p>
 <p><b><a href="../archive/">History</a></b></p>
 <p><b><a href="mailing-list.shtml">Mailing List</a></b></p>
-<p><b><a href="booking/member_list.php" target="_top">Membership List</a></b> (Printable)</p>
+<p><b><a href="booking/member_list.php" target="main">Membership List</a></b> (Printable)</p>
 <p><b><a href="contacts.html">Emergency Contact List</a></b></p>
 
 </body>
