--- a/members/edelweiss_ski_club.html
+++ b/members/edelweiss_ski_club.html
@@ -41,8 +41,12 @@ Suz & Peri Macdonald's House<br>
 Tel: (03) 9598 8953<br>
 -->
 </ul>
-<!--
 <h2>Breaking News</h2>
+<ul>
+<li><a href="correspondence/190430_MHARMB_to_Edelweiss_Re_Winter_2019.pdf">Winter Occupancy and Sewer Connection</a>
+</ul>
+
+<!--
 Hotham has heaps of snow !!  <a href="http://www.hotham.com.au/weather.php">Snow Report</a>
 -->
 
