--- a/members/menu.html
+++ b/members/menu.html
@@ -21,7 +21,7 @@
 <p><b><a href="Edelweiss_Cabin_Operating_Procedures.pdf">Cabin Operating Procedures</a> </b></p>
 <p><b><a href="../archive/">History</a></b></p>
 <p><b><a href="mailing-list.shtml">Mailing List</a></b></p>
-<p><b><a href="booking/member_list.php" target="main">Membership List</a></b> (Printable)</p>
+<p><b><a href="member_list.php" target="main">Membership List</a></b> (Printable)</p>
 <p><b><a href="https://docs.google.com/presentation/d/e/2PACX-1vSpacbriJMnB73AEUf0Jky283pqOL98yCquIHYNrVCX-K6aiKA22-cjllFweuvSaf0TQ75QdLOun264/embed?start=true&loop=false&delayms=10000">NEW Members Pack</a></b> (<a href="edelweiss_ski_club-NEW_MEMBERS_PACK.pptx" target="main">source PPTX</a>)</p>
 <p><b><a href="contacts.html">Emergency Contact List</a></b></p>
 
