--- a/members/edelweiss_ski_club.html
+++ b/members/edelweiss_ski_club.html
@@ -43,6 +43,7 @@ Tel: (03) 9598 8953<br>
 </ul>
 <h2>Breaking News</h2>
 <ul>
+<li><a href="correspondence/opening_closing_the_lodge.html">Opening / Closing the Lodge</a>
 <li><a href="correspondence/190430_MHARMB_to_Edelweiss_Re_Winter_2019.pdf">Winter Occupancy and Sewer Connection</a>
 </ul>
 
