--- a/members/cabin_bookings.html
+++ b/members/cabin_bookings.html
@@ -43,13 +43,13 @@ deposit forfit (if you don't pay the deposit)</li>
 <li>Fill out the online <a href="booking_form.php">Booking Request Form</a><br>
 (Please note that there are a maximum of 14 beds available in the Cabin at any one time)</li>
 
-<li>Your booking will be confirmed with an automated email from the Booking 
+<li>Your booking will be confirmed with an automated email from the Booking
 System and the <a href="calendar.php">Booking Calendar</a> should show your new booking</li>
 
 <li>Pay a 30% deposit within 2 weeks of making the booking (See below for payment details)</li>
 <li>Pay the remaining amount 1 month before staying at the cabin</li>
 
-<br>&nbsp;<br>Email the Booking Officer <a href="mailto:edelweiss@arrowsreach.com?subject=cabin booking">edelweiss@arrowsreach.com</a> (Bill Farrow) with any queries</br>
+<br>&nbsp;<br>Email the Booking Officer <a href="mailto:ben.incani@incani.com?subject=cabin%20booking">Ben Incani</a> with any queries</br>
 </ol>
 
 <hr>
@@ -63,7 +63,7 @@ to work out who the payment is from, let alone what they are paying for.
   <dd>
     Send payment in full directly to the Treasurer
     (Georgina McCowan, 38 Emperor Drive Ocean Grove Vic, 3226)
-    Please print out your confirmation email, or include your 
+    Please print out your confirmation email, or include your
     Booking Number with your payment. The Booking Number is also
     available on the website, just click on your name in the calendar.
   </dd>
