--- a/members/cabin_bookings.html
+++ b/members/cabin_bookings.html
@@ -49,7 +49,7 @@ System and the <a href="calendar.php">Booking Calendar</a> should show your new 
 <li>Pay a 30% deposit within 2 weeks of making the booking (See below for payment details)</li>
 <li>Pay the remaining amount 1 month before staying at the cabin</li>
 
-<br>&nbsp;<br>Email the Booking Officer <a href="mailto:ben.incani@incani.com?subject=cabin%20booking">Ben Incani</a> with any queries</br>
+<br>&nbsp;<br>Email the Booking Officer <a target="_blank"" rel="noopener noreferrer" href="mailto:ben.incani@incani.com?subject=cabin%20booking">Ben Incani</a> with any queries</br>
 </ol>
 
 <hr>
