--- a/members/cabin_bookings.html
+++ b/members/cabin_bookings.html
@@ -9,8 +9,6 @@
 <body>
 
 <h2>Cabin Booking Policy</h2>
-Cabin bookings may be closed for the 2019 season due to Hotham Resort Management's decision requiring a sewer connection. Please refer to the latest Minutes or email list for updates.
-
 <ol>
 <li>1st January Bookings Open for:
   <ul>
@@ -32,25 +30,19 @@ refundable, the Member is responsible for all payments</li>
 <li>Unused booked beds are charged at adult member rates</li>
 <li>Lapsed bookings will be automatically removed from the website and
 deposit forfit (if you don't pay the deposit)</li>
-<li>These rules will apply to all 2019 ski season bookings</li>
+<li>These rules will apply to all <u>2019</u> ski season bookings</li>
 </ol>
 
 <hr>
 <h2>Request a Booking<a name="Request"></a></h2>
 <ol>
-<li>Check the <a href="calendar.php">Booking Calendar</a> for availability</li>
-
-<li>Fill out the online <a href="booking_form.php">Booking Request Form</a><br>
-(Please note that there are a maximum of 14 beds available in the Cabin at any one time)</li>
-
-<li>Your booking will be confirmed with an automated email from the Booking
-System and the <a href="calendar.php">Booking Calendar</a> should show your new booking</li>
-
-<li>Pay a 30% deposit within 2 weeks of making the booking (See below for payment details)</li>
-<li>Pay the remaining amount 1 month before staying at the cabin</li>
-
-<br>&nbsp;<br>Email the Booking Officer <a target="_blank"" rel="noopener noreferrer" href="mailto:ben.incani@incani.com?subject=cabin%20booking">Ben Incani</a> with any queries</br>
+    <li>Check the <a href="calendar.php">Booking Calendar</a> for availability</li>
+    <li>Fill out the online <a href="booking_form.php">Booking Request Form</a><br>(Please note that there are a maximum of <u>14 beds</u> available in the Cabin at any one time)</li>
+    <li>Your booking will be confirmed with an automated email from the Booking System and the <a href="calendar.php">Booking Calendar</a> should show your new booking</li>
+    <li>Pay a 30% deposit within 2 weeks of making the booking (See below for payment details)</li>
+    <li>Pay the remaining amount 1 month before staying at the cabin</li>
 </ol>
+Email the <a target="_blank"" rel="noopener noreferrer" href="mailto:bookings@edelweiss-ski.club?subject=cabin%20booking">Booking Officer(s)</a> with any queries</br>
 
 <hr>
 <h2>Payment</h2>
@@ -68,21 +60,16 @@ to work out who the payment is from, let alone what they are paying for.
     available on the website, just click on your name in the calendar.
   </dd>
   <dt>Online</dt>
-  <dd>Use "Direct Debit" or "Pay Anyone" transfer using your online banking
-  facility. Please include your full name, and your Booking Number in the
-  transfer details.
-  <dd>You must then <b>Email</b> the Booking Officer
-  (<a href="mailto:edelweiss@arrowsreach.com?subject=Edelweiss booking payment">edelweiss@arrowsreach.com</a>)
-  and Treasurer (<a href="mailto:gemccowan@gmail.com?subject=Edelweiss booking payment">gemccowan@gmail.com</a>)
-  with the payment amount,  Booking Number, and date of transfer so that it can be reconciled.
-
-  <ul>
-    <br>Account : <b>EDELWEISS SKI CLUB OF AUSTRALIA INC</b>
-    <br>BSB : <b>033 089</b>
-    <br>Account : <b>129628</b>
-    <br>Your Name: &lt;first and last names&gt;
-    <br>Reference: <b>Booking </b>&lt;booking number&gt;
-  </ul>
+    <dd>
+    Use "Direct Debit" or "Pay Anyone" transfer using your online banking facility. Please include your full name, and your Booking Number in the transfer details.<br/>
+    You must then <b>Email</b> the <a target="_blank"" rel="noopener noreferrer" href="mailto:bookings@edelweiss-ski.club?subject=Edelweiss%20Booking%20Payment">Booking Officer(s)</a> with the payment amount,  Booking Number, and date of transfer so that it can be reconciled.<br/>
+    <div style='margin: 10px 0 0 20px;'>
+        Account : <b>EDELWEISS SKI CLUB OF AUSTRALIA INC</b></br>
+        BSB : <b>033 089</b></br>
+        Account : <b>129628</b></br>
+        Your Name: &lt;first and last names&gt;</br>
+        Reference: <b>Booking </b>&lt;booking number&gt;</br>
+    </div>
   </dd>
 </dl>
 
