--- a/members/minutes.html
+++ b/members/minutes.html
@@ -6,6 +6,7 @@
 <dt><h3>2019</h3></dt>
 <dd>
   <ul>
+    <li><a href="minutes/Minutes_2019-11-19.pdf">Minutes 19 November 2019</a></li>
     <li><a href="minutes/Minutes_2019-01-23.pdf">Minutes 23 January 2019</a></li>
   </ul>
 </dd>
