--- a/members/menu.html
+++ b/members/menu.html
@@ -8,7 +8,7 @@
 <body>
 
 <p><b><a href="index.html" target="_top">Home</a></b></p>
-<p><b><a href="minutes.html">Meeting Minutes</a></b></p>
+<p><b><a href="minutes.html?Minutes_2019-11-19">Meeting Minutes</a></b></p>
 <p><b><a href="calendar.php">Booking Calendar</a></b></p>
 <p><b><a href="cabin_bookings.html">Make a Booking</a></b></p>
 <p><b><a href="cabin_fees.html">Cabin Fees and Yearly Subscriptions</a></b></p>
