--- a/members/minutes.html
+++ b/members/minutes.html
@@ -7,6 +7,10 @@
 <dd>
   <ul>
     <li><a href="minutes/Minutes_2019-11-19.pdf">Minutes 19 November 2019</a></li>
+    <ul>
+	    <li><a href="minutes/Minutes_2019-11-19_cabin-manager-report.pdf">Cabin Managers Report</a></li>
+	    <li><a href="https://docs.google.com/presentation/d/e/2PACX-1vTI01bpS7oEkv3DrM7v5anVFQo9v01LSHTfvsIKctUXG4AU5W8Df-bqgSFWBKbkpg/embed?start=true&loop=false&delayms=10000&slide=id.p1">Edelweiss Ski Club Nov 19th AGM</a></li>
+    </ul>
     <li><a href="minutes/Minutes_2019-01-23.pdf">Minutes 23 January 2019</a></li>
   </ul>
 </dd>
