update rates and bookings

--- a/members/cabin_fees_2019.html
+++ b/members/cabin_fees_2019.html
@@ -8,9 +8,9 @@
 	<META NAME="CHANGED" CONTENT="20090404;19320900">
 </HEAD>
 <BODY>
-<h2>Cabin fees for 2020: </h2>
+<h2>Cabin fees for 2019: </h2>
 
-<TABLE BORDER=1 CELLPADDING=3 CELLSPACING=0 style="">
+<TABLE BORDER=1 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
 		<TD>
 			<B>Membership category </B>
@@ -21,7 +21,7 @@
 	</TR>
 	<TR VALIGN=TOP>
 		<TD>
-			Full members A &amp; B (spouse)
+			Full members A &amp; B (spouse)</P>
 		</TD>
 		<TD>
 			$30.00 per night
@@ -37,10 +37,10 @@
 	</TR>
 	<TR VALIGN=TOP>
 		<TD>
-			Member levy for guests
+			Member levy for guests</P>
 		</TD>
 		<TD>
-			$60.00 per night High Peak
+			$50.00 per night High Peak
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
@@ -48,7 +48,7 @@
 			Member levy for guests – child under 18
 		</TD>
 		<TD>
-			$30.00 per night High Peak
+			$20.00 per night High Peak
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
@@ -64,30 +64,26 @@
 			Non member summer rate (whole lodge) Night/Week
 		</TD>
 		<TD>
-			$100/$7,000
+			$200/$1,000
 		</TD>
 	</TR>
 </TABLE>
 
 <P>
 <ul>
-<LI>High Peak Winter Rates apply from 1st June to the 7th of Novemeber.
+<LI>High Peak Winter Rates apply to the months of July through September.
 </LI>
 <!-- <LI>Low Peak Winter Rates apply to the month of June starting on the Queens Birthday Weekend, and also for the month of September.
 </LI> -->
-<LI>Summer rates are capped at $100.00 per night for members and non-members.
+<LI>Summer rates are capped at $100.00 per night for members, $200 for non-members.
 </LI>
-<!--
-<LI>
-Please note that the online booking system does not currently handle the capped pricing.
-If you want the capped rate, please book all of the beds and only pay the capped amount.
-</LI>A
--->
+<LI>Please note that the online booking system does not currently handle the capped pricing. If you want the capped rate, please book all of the beds and only pay the capped amount.
+</LI>
 </ul>
 
 <h2><A NAME="sub">Annual subscriptions: </A></h2>
 
-<TABLE BORDER=1 CELLPADDING=3 CELLSPACING=0>
+<TABLE BORDER=1 CELLPADDING=0 CELLSPACING=0>
 	<TR VALIGN=TOP>
 		<TD>
 			<B>Membership category</B>
