--- a/members/cabin_fees.html
+++ b/members/cabin_fees.html
@@ -75,7 +75,7 @@
 </LI>
 <!-- <LI>Low Peak Winter Rates apply to the month of June starting on the Queens Birthday Weekend, and also for the month of September.
 </LI> -->
-<LI>Summer rates are capped at $100.00 per night for members and non-members.
+<LI>Summer rates are capped at $100.00 per night for members and non-members (whole lodge).
 </LI>
 <!--
 <LI>
@@ -123,7 +123,7 @@ If you want the capped rate, please book all of the beds and only pay the capped
 </TABLE>
 <P>
 <ul>
-<LI>The Work Party Levy of $100 per year if you can't attend a work party
+<LI>The Work Party Levy of $200 per year if you can't attend a work party
 </LI>
 <LI>The Committee Member Levy of $-100 per year
 </LI>
