--- a/members/menu.html
+++ b/members/menu.html
@@ -11,7 +11,7 @@
 <p><b><a href="minutes.html?Minutes_2019-11-19">Meeting Minutes</a></b></p>
 <p><b><a href="calendar.php">Booking Calendar</a></b></p>
 <p><b><a href="cabin_bookings.html">Make a Booking</a></b></p>
-<p><b><a href="cabin_fees.html?year=2020">Cabin Fees and Yearly Subscriptions</a></b></p>
+<p><b><a href="cabin_fees.html?year=20200101">Cabin Fees and Yearly Subscriptions</a></b></p>
 <!--
 <p><b>Download cabin attendance invoice
 <a href="Cabinattendanceinvoice.pdf"> [PDF]</a>
