--- a/members/menu.html
+++ b/members/menu.html
@@ -1,8 +1,11 @@
 <html>
 
 <head>
-<title>Home</title>
-<base target="main">
+    <title>Home</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <base target="main">
 </head>
 
 <body>
